<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/gray_light">


    <!-- Willkommenstext -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="-90dp"
        app:srcCompat="@drawable/iconneu" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/willkommen_budget_tracker"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text_color"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <!-- Benutzername -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/benutzername"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/primary_text_color"
            android:textColorHint="@color/secondary_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Passwort -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidthFocused="2dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/primary_text_color"
            android:textColorHint="@color/secondary_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Abstand -->
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <!-- Login-Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/colorPrimary" />

    <!-- Abstand -->
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <!-- Registrieren-Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrieren"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/button_secondary"
        app:cornerRadius="8dp" />


</LinearLayout>
