<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/item_background"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Typ"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <!-- Betrag -->
    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Betrag"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp" />

    <!-- Kategorie und Datum in einer horizontalen Ansicht -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_label"
            android:textSize="14sp"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textSize="14sp"
            android:textColor="@color/gray" />

    </LinearLayout>

    <!-- Beschreibung -->
    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Beschreibung"
        android:textSize="14sp"
        android:textColor="@color/gray" />


    <Button
        android:id="@+id/buttonDeleteTransaction"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/delete"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonEditTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="Bearbeiten"
        android:textColor="@android:color/white" />
</LinearLayout>
